feat: build and deploy through oneshot